--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,7 @@ tifffile==0.14.0
 tornado==4.5.3
 traitlets==4.3.2
 typing==3.6.4
-urllib3==1.22
+urllib3>=1.23
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.1.4
